<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ODK Services</string>

    <string name="core_notice">ODK Services provides database, file access, and data synchronization services to all ODK 2.0 applications.</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_sync">Sync</string>

	<!-- Checkpoint and Conflict Resolution Stuff -->
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="take_local">Take Local Version</string>
	<string name="take_server">Take Server Version</string>
	<string name="mark_resolved">Mark Resolved</string>
	<string name="resolve_cannot_complete_message">A value has not been chosen for every conflicting column. The row cannot be resolved.</string>
	<string name="conflict_local_was_deleted_explanation">You have deleted a row someone else has edited.</string>
	<string name="conflict_server_was_deleted_explanation">Another user has deleted a row you have edited.</string>
    <string name="conflict_resolve_or_choose">Another user has edited the same row you have edited.</string>
	<string name="radio_button_message_restore_local_deleted">Restore and resolve.</string>
	<string name="radio_button_message_delete_local_deleted">Ignore changes, delete on server.</string>
	<string name="radio_button_message_restore_server_deleted">Restore and resolve.</string>
	<string name="radio_button_message_delete_server_deleted">Delete and lose local changes.</string>

    <string name="conflict_take_local_warning">Overwrite all server changes with the local changes?</string>
    <string name="conflict_take_server_warning">Overwrite all local changes with the server changes?</string>
    <string name="conflict_take_local_with_deltas_warning">Overwrite local and server changes with the selected values?</string>
	<string name="conflict_delete_local_confirmation_warning">Delete the row and lose your local changes?</string>
	<string name="conflict_delete_on_server_confirmation_warning">Delete row on server?</string>

	<string name="checkpoint_restore_complete_or_take_newest">Restore to earlier Finalized state or Save checkpoint as Incomplete</string>
	<string name="checkpoint_restore_incomplete_or_take_newest">Restore to previous Incomplete Save or Save checkpoint as Incomplete</string>
	<string name="checkpoint_remove_or_take_newest">Discard or Save checkpoint as Incomplete</string>

    <string name="select_checkpoint_to_resolve">Select the row with checkpoints to resolve</string>
    <string name="no_items_display_checkpoints">Please wait&#8230;\nSearching for checkpoint rows to resolve.</string>
    <string name="checkpoint_take_all_oldest_or_remove">Discard All Checkpoints</string>
    <string name="checkpoint_take_all_newest">Update All Checkpoints to Incomplete State</string>

    <string name="checkpoint_radio_local">Apply:</string>
    <string name="checkpoint_radio_server">Restore:</string>
    <string name="checkpoint_take_oldest">Discard Checkpoint</string>
	<string name="checkpoint_take_oldest_remove">Discard</string>
	<string name="checkpoint_take_oldest_finalized">Restore to prior Finalized State</string>
	<string name="checkpoint_take_oldest_incomplete">Restore to prior Incomplete State</string>
	<string name="checkpoint_take_newest">Apply all changes and Save as Incomplete</string>
    <string name="checkpoint_take_newest_with_deltas">Apply Indicated Changes and Save as Incomplete</string>

	<string name="checkpoint_delete_warning">Delete entirely?</string>
	<string name="checkpoint_take_oldest_warning">Discard the Checkpoint and Proceed?</string>
	<string name="checkpoint_take_newest_warning">Save all changes as Incomplete and Proceed?</string>
    <string name="checkpoint_take_newest_with_deltas_warning">Apply Indicated Changes, Save as Incomplete and Proceed?</string>

    <string name="checkpoint_auto_apply">No user-defined field differences -- automatically discarding checkpoint.</string>
    <string name="checkpoint_auto_apply_all">No user-defined field differences in any rows\nAutomatically discarded checkpoints.</string>

    <string name="select_conflict_to_resolve">Select the row with conflicts to resolve</string>
    <string name="no_items_display_conflicts">Please Wait&#8230;\nSearching for conflicting rows to resolve.</string>
    <string name="conflict_take_all_local_updates">Take Local Version - Reject All Server Changes</string>
    <string name="conflict_take_all_server_updates">Take Server Version - Discard Local Changes</string>

    <string name="conflict_resolving_all">Resolving All Conflicts</string>
    <string name="resolving_row_n_of_m">Resolving row %1$d of %2$d</string>
    <string name="resolver_already_active">Action already in progress</string>
    <string name="done_resolving_rows">Completed</string>

    <string name="conflict_radio_local">Local:</string>
    <string name="conflict_radio_server">Server:</string>
	<string name="conflict_take_local_updates">Take Local Version</string>
	<string name="conflict_take_server_updates">Take Server Version</string>
	<string name="conflict_take_local_with_deltas">Merge Changes as Indicated Below</string>

	<string name="conflict_restore_with_server_changes">Restore local record with server updates</string>
	<string name="conflict_restore_with_local_changes">Restore server record with local updates</string>
	<string name="conflict_enforce_local_delete">Delete record on server</string>
	<string name="conflict_apply_delete_from_server">Delete local record</string>

    <string name="conflict_auto_apply">No user-defined field differences -- automatically taking server metadata revisions.</string>
    <string name="conflict_auto_apply_all">No user-defined field differences in any rows.\nAutomatically took server revisions.</string>

    <string name="conflict_database_consistency_error">Database consistency issue when resolving conflicts -- contact the ODK Team</string>

    <!-- Sync Service and Notifications stuff -->
    <string name="sync_starting">Starting sync&#8230;</string>

    <string name="sync_getting_app_level_manifest">Retrieving list of application files from server.</string>

    <string name="sync_uploading_local_file">Uploading %1$s to server.</string>
    <string name="sync_deleting_file_on_server">Deleting %1$s on server.</string>
    <string name="sync_verifying_local_file">Verifying %1$s matches version on server.</string>
    <string name="sync_deleting_local_file">Deleting %1$s on device.</string>

    <string name="sync_getting_table_manifest">Retrieving list of %1$s files from server.</string>

    <string name="sync_table_data_sync_complete">Completed sync of %1$s dataset with server.</string>
    <string name="sync_table_data_sync_pending_attachments">Partially completed sync of %1$s dataset with server. Not all attachments synced.</string>
    <string name="sync_table_data_sync_with_conflicts">Partially completed sync of %1$s dataset with server. Resolve conflicts and resync.</string>
    <string name="sync_table_contains_checkpoints">Checkpoints must be resolved before sync can proceed.</string>

    <string name="sync_retrieving_tables_list_from_server">Retrieving list of tables from server.</string>
    <string name="sync_verifying_table_schema_on_server">Verifying %1$s schema matches that on server.</string>
    <string name="sync_creating_local_table">Creating %1$s&#8230;</string>
    <string name="sync_dropping_local_table">Deleting %1$s from device&#8230;</string>
    <string name="sync_table_level_file_sync_complete">Completed sync of all %1$s configuration files.</string>

    <string name="sync_getting_changed_rows_on_server">Fetching %1$s dataset changes from server.</string>
    <string name="sync_anaylzing_row_changes">Analyzing %1$s dataset changes.</string>

    <string name="sync_upserting_server_row">Sending %1$s dataset row %2$d of %3$d to server.</string>
    <string name="sync_altering_server_row">Sending %1$s dataset row %2$d of %3$d to server.</string>
    <string name="sync_deleting_server_row">Deleting %1$s dataset row %2$d of %3$d on server.</string>
    <string name="sync_uploading_attachments_server_row">Uploading %1$s dataset attachment %2$d of %3$d to server.</string>

    <string name="sync_deleting_local_row">Deleting %1$s local dataset row %2$d of %3$d.</string>
    <string name="sync_updating_local_row">Updating %1$s local dataset row %2$d of %3$d.</string>
    <string name="sync_inserting_local_row">Inserting %1$s local dataset row %2$d of %3$d.</string>
    <string name="sync_marking_conflicting_local_row">Mark conflicting %1$s local dataset row %2$d of %3$d.</string>

    <!-- Sync User Interface stuff -->
    <string name="sync_server_url">Aggregate URL:</string>
    <string name="sync_default_server_url">http://opendatakit-2.appspot.com</string>
    <string name="sync_account">Account:</string>
    <string name="sync_progress_state_label">Sync Progress State</string>
    <string name="sync_progress_message_label">Sync Progress Message</string>
    <string name="sync_save_settings">Save settings</string>
    <string name="sync_auth_account">Authorize account</string>
    <string name="sync_instance_files">Sync Instance Attachments</string>
    <string name="sync_defer_instance_files">Defer Instance Attachments</string>
    <string name="sync_start">Sync now</string>
    <string name="sync_reset_server">Reset App Server</string>

    <string name="sync_confirm_change_settings">Confirm Change Settings</string>
    <string name="sync_change_settings_warning">If you change your settings, tables you have synched now may no longer be able to be synched.</string>
    <string name="sync_save">Save</string>

    <string name="sync_choose_account">Please choose an account</string>
    <string name="sync_waiting_auth">Waiting on authentication</string>

    <string name="sync_confirm_reset_app_server">Confirm Reset App Server</string>
    <string name="sync_reset_app_server_warning">Resetting the App Server will clear all data currently on the server.</string>
    <string name="sync_reset">Reset</string>


</resources>
