<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aggregate_activity_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/sync_uri_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_server_url" />

        <EditText
            android:id="@+id/sync_uri_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:text="@string/sync_default_server_url" />

        <TextView
            android:id="@+id/sync_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_account" />

        <Spinner
            android:id="@+id/sync_account_list_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sync_save_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_save_settings" />

        <Button
            android:id="@+id/sync_authorize_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_auth_account" />

        <ToggleButton
            android:id="@+id/sync_instance_attachments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/sync_defer_instance_files"
            android:textOn="@string/sync_instance_files" />

        <Button
            android:id="@+id/sync_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_start" />

        <TextView
            android:id="@+id/sync_progress_state_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_progress_state_label" />

        <TextView
            android:id="@+id/sync_progress_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sync_progress_message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_progress_message_label" />

        <TextView
            android:id="@+id/sync_progress_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- push the reset button to the bottom of the screen -->

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/sync_reset_server_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync_reset_server" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>